Link Icon Changes

--- a/link/index.html
+++ b/link/index.html
@@ -30,7 +30,7 @@
                     </a>
                     <a href="https://www.accuweather.com/en/us/issaquah/98027/weather-forecast/346384">
                         <figure>
-                            <img src="images/accuweather.png" alt="accuweather Icon">
+                            <img src="images/accuweatherwa.png" alt="accuweather Icon">
                             <figcaption>AccuWeather</figcaption>
                         </figure>
                     </a>
