Update Amazon link to smile.amazon.com

--- a/link/index.html
+++ b/link/index.html
@@ -138,7 +138,7 @@
                             <figcaption>CloudApp</figcaption>
                         </figure>
                     </a>
-                    <a href="https://www.amazon.com/">
+                    <a href="https://smile.amazon.com/">
                         <figure>
                             <img src="images/amazon.png" alt="Amazon Icon">
                             <figcaption>Amazon</figcaption>
