--- a/link/index.html
+++ b/link/index.html
@@ -16,7 +16,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="itemLink">
-                  <a href="https://www.coingecko.com/en">
+                  <a href="https://www.coingecko.com/en"></a>
                         <figure>
                             <img src="images/coingecko.png" alt="coingecko Icon">
                             <figcaption>coingecko</figcaption>
